dashboard/testing dep updates (#5859)
* dashboard/testing dep updates

* [remove] prod yml test changes

* revert prod yml chanegs